--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@ layout: default
 
 <div class="page clearfix" index>
     <div class="left">
-        <h1>Data Journalism</h1>
+        <h1>Apuntes</h1>
         <small>Publicaciones mensuales realizadas por  CADsalud</small>
         <hr>
         <ul>
