--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@ layout: default
 
 <div class="page clearfix" index>
     <div class="left">
-        <h1>Apuntes</h1>
-        <small>Publicaciones mensuales realizadas por  CADsalud</small>
+        <h1>Apuntes al margen</h1>
+        <small>Publicaciones de Ciencia de Datos aplicadas a Salud Pública</small>
         <hr>
         <ul>
             {% for post in paginator.posts %}
