prueba de imagen

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@ layout: default
     <div class="left">
         <h1>Apuntes al margen</h1>
         <small>Publicaciones de Ciencia de Datos aplicadas a Salud Pública</small>
-		<center><img src="images-post/cad_logo.png" height="90"></center>
+		<img src="images-post/cad_logo.png" height="50">
         <hr>
         <ul>
             {% for post in paginator.posts %}
