correcion del index

--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@ layout: default
 
 <div class="page clearfix" index>
     <div class="left">
-        <h1><img src="images-post/cad_logo.png" height="50">     Apuntes al margen</h1>
-        <small>Publicaciones de Ciencia de Datos aplicadas a Salud Pública</small>
+        <h1><img src="images-post/cad_logo.png" height="50"> Apuntes al margen</h1>
+        <small>Publicaciones de Ciencia de Datos en Salud Pública</small>
         <hr>
         <ul>
             {% for post in paginator.posts %}
